# issue-jumper

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.zh-CN.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: check.yml  ci.yml  release.yml
docs/: architecture.md  design.md  development.md  integrations.md  technical-design.md  usage.md
scripts/: check-file-lines.sh  coverage.sh  install-zed.sh  install.sh  package-release.sh  publish-release.sh
src/: config.rs  error.rs  jump.rs  lib.rs  main.rs  platform.rs
src/browser/: mod.rs  platform.rs
src/browser/platform/: macos.rs  unix.rs  windows.rs
src/cli/: config_lint.rs  doctor.rs  install_zed.rs  integration.rs  mod.rs  open.rs  url.rs
src/config/: lint.rs  tests.rs
src/git/: mod.rs  remote.rs
src/issue/: mod.rs
src/url/: mod.rs
src/zed/: mod.rs  platform.rs  tests.rs
src/zed/platform/: unix.rs  windows.rs
tests/: cli_binary.rs
